--- a/apps/users-client/project.json
+++ b/apps/users-client/project.json
@@ -2,7 +2,7 @@
   "name": "users-client",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "food-stories",
+  "prefix": "fs",
   "sourceRoot": "apps/users-client/src",
   "tags": [],
   "targets": {
