--- a/libs/users-client/web-shell/.eslintrc.json
+++ b/libs/users-client/web-shell/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["../../.eslintrc.json"],
+  "extends": ["../../../.eslintrc.json"],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
@@ -17,7 +17,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "fs",
+            "prefix": "food-stories",
             "style": "kebab-case"
           }
         ]
