--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nx/angular": "16.5.3",
     "@nx/nest": "^16.5.5",
     "axios": "^1.0.0",
+    "express": "^4.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -41,6 +42,7 @@
     "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "16.5.3",
     "@nx/eslint-plugin": "16.5.3",
+    "@nx/express": "16.5.5",
     "@nx/jest": "16.5.5",
     "@nx/js": "16.5.5",
     "@nx/linter": "16.5.3",
@@ -49,6 +51,7 @@
     "@nx/webpack": "16.5.5",
     "@nx/workspace": "16.5.3",
     "@schematics/angular": "~16.1.0",
+    "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
