--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/router": "~16.1.0",
+    "@grpc/grpc-js": "^1.8.20",
+    "@grpc/proto-loader": "^0.7.8",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/microservices": "^10.1.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nx/angular": "16.5.3",
     "@nx/nest": "^16.5.5",
