[api-gateway] feat: grpc auth client implemented

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@food-stories/api-gateway/core": ["libs/api-gateway/core/src/index.ts"],
+      "@food-stories/api-gateway/auth": ["libs/api-gateway/auth/src/index.ts"],
+      "@food-stories/common": ["libs/common/src/index.ts"],
       "@food-stories/shared-icons": [
         "libs/users-client/shared/icons/src/index.ts"
       ],
