--- a/libs/api-gateway/auth/project.json
+++ b/libs/api-gateway/auth/project.json
@@ -1,21 +1,21 @@
 {
-  "name": "api-gateway-core",
+  "name": "api-gateway-auth",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/api-gateway/core/src",
+  "sourceRoot": "libs/api-gateway/auth/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/api-gateway/core/**/*.ts"]
+        "lintFilePatterns": ["libs/api-gateway/auth/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/api-gateway/core/jest.config.ts",
+        "jestConfig": "libs/api-gateway/auth/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
