--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@grpc/grpc-js": "^1.8.20",
     "@grpc/proto-loader": "^0.7.8",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "^10.1.2",
     "@nestjs/platform-express": "^10.0.2",
