--- a/apps/auth-srv/tsconfig.json
+++ b/apps/auth-srv/tsconfig.json
@@ -12,5 +12,11 @@
   ],
   "compilerOptions": {
     "esModuleInterop": true,
-  }
+    "baseUrl": "src",
+    "paths": {
+      "@common": ["../../../libs/common/src/index.ts"],
+      "@infrastructure/*": ["infrastructure/*"]
+    }
+  },
+  
 }
