--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nx/angular": "16.5.3",
     "@nx/nest": "^16.5.5",
+    "@types/cors": "^2.8.13",
     "axios": "^1.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "winston": "^3.10.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -57,7 +62,9 @@
     "@schematics/angular": "~16.1.0",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/morgan": "^1.9.4",
     "@types/node": "~18.7.1",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.0",
