--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
+    "ts-proto": "^1.156.2",
     "typescript": "~5.1.3"
   }
 }
