--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
+    "protobufjs": "^7.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
