--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -3,4 +3,4 @@ plugins:
   - name: ts
     out: ./gen
     strategy: all
-    path: node_modules\.bin\protoc-gen-ts_proto
+    path: node_modules\.bin\tsproto
