--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@food-stories/api-gateway/auth": ["libs/api-gateway/auth/src/index.ts"],
+      "@food-stories/api-gateway/users": [
+        "libs/api-gateway/users/src/index.ts"
+      ],
       "@food-stories/common/*": ["libs/common/src/lib/*"],
       "@food-stories/shared-icons": [
         "libs/users-client/shared/icons/src/index.ts"
