--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nx/nest": "^16.5.5",
     "@types/cors": "^2.8.13",
     "axios": "^1.0.0",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
@@ -35,6 +36,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "winston": "^3.10.0",
     "zone.js": "~0.13.0"
   },
@@ -65,6 +67,7 @@
     "@types/jest": "^29.4.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "~18.7.1",
+    "@types/uuid": "^9.0.2",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
