[users-client] test: custom validator and directive, registor form

--- a/libs/users-client/auth/feature/register/.eslintrc.json
+++ b/libs/users-client/auth/feature/register/.eslintrc.json
@@ -5,14 +5,14 @@
     {
       "files": ["*.ts"],
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "foodStories",
-            "style": "camelCase"
-          }
-        ],
+        // "@angular-eslint/directive-selector": [
+        //   "error",
+        //   {
+        //     "type": "attribute",
+        //     "prefix": "foodStories",
+        //     "style": "camelCase"
+        //   }
+        // ],
         "@angular-eslint/component-selector": [
           "error",
           {
