--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
+    "ngx-cookie-service": "^16.0.1",
     "protobufjs": "^7.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
@@ -65,6 +67,7 @@
     "@schematics/angular": "~16.1.0",
     "@types/express": "4.17.13",
     "@types/jest": "^29.4.0",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/node": "~18.7.1",
     "@types/uuid": "^9.0.2",
