--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -32,6 +32,9 @@
       "@food-stories/users-client/auth/feature/shell": [
         "libs/users-client/auth/feature/shell/src/index.ts"
       ],
+      "@food-stories/users-client/auth/ui/dialog-box": [
+        "libs/users-client/auth/ui/dialog-box/src/index.ts"
+      ],
       "@food-stories/users-client/auth/ui/layout": [
         "libs/users-client/auth/ui/layout/src/index.ts"
       ],
