--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,6 +23,9 @@
       "@food-stories/shared-icons": [
         "libs/users-client/shared/icons/src/index.ts"
       ],
+      "@food-stories/users-client/auth/data-access": [
+        "libs/users-client/auth/data-access/src/index.ts"
+      ],
       "@food-stories/users-client/auth/feature/login": [
         "libs/users-client/auth/feature/login/src/index.ts"
       ],
@@ -38,11 +41,17 @@
       "@food-stories/users-client/auth/ui/layout": [
         "libs/users-client/auth/ui/layout/src/index.ts"
       ],
+      "@food-stories/users-client/auth/ui/username-dialog-input": [
+        "libs/users-client/auth/ui/username-dialog-input/src/index.ts"
+      ],
       "@food-stories/users-client/home": [
         "libs/users-client/home/src/index.ts"
       ],
       "@food-stories/users-client/shared": [
         "libs/users-client/shared/src/index.ts"
+      ],
+      "@food-stories/users-client/shared/config": [
+        "libs/users-client/shared/config/src/index.ts"
       ],
       "@food-stories/users-client/shared/utils": [
         "libs/users-client/shared/utils/src/index.ts"
