--- a/apps/api-gateway/project.json
+++ b/apps/api-gateway/project.json
@@ -17,7 +17,7 @@
         "assets": [
           "apps/api-gateway/src/assets",
           {
-            "input": "libs/common/src/lib/proto",
+            "input": "proto/",
             "glob": "**/*.proto",
             "output": "proto"
           }
