--- a/apps/users-srv/project.json
+++ b/apps/users-srv/project.json
@@ -16,7 +16,7 @@
         "tsConfig": "apps/users-srv/tsconfig.app.json",
         "assets": [
           {
-            "input": "libs/common/src/lib/proto/",
+            "input": "proto/",
             "glob": "users_service.proto",
             "output": "proto"
           }
