--- a/libs/users-client/shared/data-access/tsconfig.lib.json
+++ b/libs/users-client/shared/data-access/tsconfig.lib.json
@@ -5,6 +5,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../config/src/lib/api-endpoints.ts", "../config/src/lib/environment.ts", "../config/src/index.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
