--- a/libs/users-client/shared/utils/.eslintrc.json
+++ b/libs/users-client/shared/utils/.eslintrc.json
@@ -9,7 +9,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "foodStories",
+            "prefix": "fs",
             "style": "camelCase"
           }
         ],
