--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "hammerjs": "^2.0.8",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
+    "ngx-image-cropper": "^7.2.1",
     "protobufjs": "^7.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
