--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@nestjs/testing": "^10.0.2",
     "@ngrx/schematics": "~16.0.0",
     "@nx/cypress": "16.5.3",
+    "@nx/esbuild": "16.5.5",
     "@nx/eslint-plugin": "16.5.3",
     "@nx/express": "16.5.5",
     "@nx/jest": "16.5.5",
@@ -84,6 +85,7 @@
     "@typescript-eslint/parser": "^5.60.1",
     "autoprefixer": "^10.4.0",
     "cypress": "^12.16.0",
+    "esbuild": "^0.17.17",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
