--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,7 @@
       "@food-stories/common/logger": ["libs/common/logger/src/index.ts"],
       "@food-stories/common/typings": ["libs/common/typings/src/index.ts"],
       "@food-stories/common/utils": ["libs/common/utils/src/index.ts"],
+      "@food-stories/posts-srv/core": ["libs/posts-srv/core/src/index.ts"],
       "@food-stories/shared-icons": [
         "libs/users-client/shared/icons/src/index.ts"
       ],
