[API-GATEWAY] core: firebase admin module

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,9 @@
       "@food-stories/api-gateway/common": [
         "libs/api-gateway/common/src/index.ts"
       ],
+      "@food-stories/api-gateway/core/firebase-admin": [
+        "libs/api-gateway/core/firebase-admin/src/index.ts"
+      ],
       "@food-stories/api-gateway/post": ["libs/api-gateway/post/src/index.ts"],
       "@food-stories/api-gateway/users": [
         "libs/api-gateway/users/src/index.ts"
