--- a/apps/api-gateway/project.json
+++ b/apps/api-gateway/project.json
@@ -20,6 +20,11 @@
             "input": "proto/",
             "glob": "**/*.proto",
             "output": "proto"
+          },
+          {
+            "input": "service-accounts/",
+            "glob": "**/*.json",
+            "output": "service-accounts"
           }
         ],
         "isolatedConfig": true,
