--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "@nx/nest": "^16.5.5",
     "@types/cors": "^2.8.13",
     "axios": "^1.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "firebase-admin": "^12.0.0",
     "hammerjs": "^2.0.8",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
