--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "^10.1.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.3.0",
     "@ngrx/component-store": "~16.0.0",
     "@ngrx/effects": "~16.0.0",
     "@ngrx/entity": "~16.0.0",
