[Likes-service] likes service configured and 3 methods implemented

--- a/apps/posts-srv/project.json
+++ b/apps/posts-srv/project.json
@@ -19,6 +19,11 @@
             "input": "proto/",
             "glob": "posts_service.proto",
             "output": "proto"
+          },
+          {
+            "input": "proto/",
+            "glob": "likes_service.proto",
+            "output": "proto"
           }
         ],
         "isolatedConfig": true,
