--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,6 +27,9 @@
       ],
       "@food-stories/api-gateway/like": ["libs/api-gateway/like/src/index.ts"],
       "@food-stories/api-gateway/post": ["libs/api-gateway/post/src/index.ts"],
+      "@food-stories/api-gateway/social-network": [
+        "libs/api-gateway/social-network/src/index.ts"
+      ],
       "@food-stories/api-gateway/users": [
         "libs/api-gateway/users/src/index.ts"
       ],
