--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.18.1",
     "firebase-admin": "^12.0.0",
     "hammerjs": "^2.0.8",
+    "kafkajs": "^2.2.4",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "ngx-image-cropper": "^7.2.1",
