--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/microservices": "^10.1.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-socket.io": "^10.3.4",
     "@nestjs/swagger": "^7.3.0",
+    "@nestjs/websockets": "^10.3.4",
     "@ngrx/component-store": "~16.0.0",
     "@ngrx/effects": "~16.0.0",
     "@ngrx/entity": "~16.0.0",
