--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "morgan": "^1.10.0",
     "neo4j-driver": "^5.18.0",
     "ngx-image-cropper": "^7.2.1",
+    "ngx-socket-io": "^4.6.1",
     "protobufjs": "^7.2.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.7.5",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0",
