--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "socket.io": "^4.7.5",
+    "swiper": "^11.1.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0",
