feat: block user implemented

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 service-accounts/
 
+
 # env
 .env
 
@@ -51,7 +52,7 @@ Thumbs.db
 .runtimeconfig.json
 
 
-# nx
-.nx\
-cache/
-.nx\cache
+# # nx
+# .nx\
+# cache/
+# .nx\cache
