--- a/libs/api-gateway/social-network/tsconfig.lib.json
+++ b/libs/api-gateway/social-network/tsconfig.lib.json
@@ -11,6 +11,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../users/src/lib/hasBlocked.middleware.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
