[admins-client] feat: admin login

--- a/apps/admins-client/project.json
+++ b/apps/admins-client/project.json
@@ -8,18 +8,25 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/admins-client",
         "index": "apps/admins-client/src/index.html",
         "main": "apps/admins-client/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/admins-client/tsconfig.app.json",
         "assets": [
           "apps/admins-client/src/favicon.ico",
           "apps/admins-client/src/assets"
         ],
-        "styles": ["apps/admins-client/src/styles.css"],
+        "styles": [
+          "@angular/material/prebuilt-themes/indigo-pink.css",
+          "apps/admins-client/src/styles.css"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -44,7 +51,13 @@
           "vendorChunk": true,
           "extractLicenses": false,
           "sourceMap": true,
-          "namedChunks": true
+          "namedChunks": true,
+          "fileReplacements": [
+            {
+              "replace": "apps/admins-client/src/environments/environment.ts",
+              "with": "apps/admins-client/src/environments/environment.development.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
@@ -69,7 +82,9 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "apps/admins-client/**/*.ts",
@@ -79,7 +94,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/admins-client/jest.config.ts",
         "passWithNoTests": true
