--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@food-stories/admins-client/auth": [
+        "libs/admins-client/auth/src/index.ts"
+      ],
       "@food-stories/api-gateway/auth": ["libs/api-gateway/auth/src/index.ts"],
       "@food-stories/api-gateway/comment": [
         "libs/api-gateway/comment/src/index.ts"
