feat: user management finished

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,6 +24,9 @@
       "@food-stories/admins-client/layout": [
         "libs/admins-client/layout/src/index.ts"
       ],
+      "@food-stories/admins-client/users": [
+        "libs/admins-client/users/src/index.ts"
+      ],
       "@food-stories/api-gateway/auth": ["libs/api-gateway/auth/src/index.ts"],
       "@food-stories/api-gateway/comment": [
         "libs/api-gateway/comment/src/index.ts"
