fix and feat: fixed post  reload function and implemente geet users posts for feeds rpc

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -37,6 +37,7 @@
       "@food-stories/api-gateway/core/firebase-admin": [
         "libs/api-gateway/core/firebase-admin/src/index.ts"
       ],
+      "@food-stories/api-gateway/feed": ["libs/api-gateway/feed/src/index.ts"],
       "@food-stories/api-gateway/like": ["libs/api-gateway/like/src/index.ts"],
       "@food-stories/api-gateway/notifications": [
         "libs/api-gateway/notifications/src/index.ts"
