--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -117,6 +117,9 @@
       "@food-stories/users-client/post/ui/create-post-stepper": [
         "libs/users-client/post/ui/create-post-stepper/src/index.ts"
       ],
+      "@food-stories/users-client/post/ui/feed-item": [
+        "libs/users-client/post/ui/feed-item/src/index.ts"
+      ],
       "@food-stories/users-client/post/ui/posts-grid": [
         "libs/users-client/post/ui/posts-grid/src/index.ts"
       ],
