--- a/apps/api-gateway/project.json
+++ b/apps/api-gateway/project.json
@@ -70,6 +70,10 @@
           "codeCoverage": true
         }
       }
+    },
+    "docker-build": {
+      "dependsOn": ["build"],
+      "command": "docker build -f apps/api-gateway/Dockerfile . -t api-gateway"
     }
   },
   "tags": []
