fix: kafka bootstrap bugs on  timeouts and  async consuming

--- a/apps/api-gateway/project.json
+++ b/apps/api-gateway/project.json
@@ -28,7 +28,8 @@
           }
         ],
         "isolatedConfig": true,
-        "webpackConfig": "apps/api-gateway/webpack.config.js"
+        "webpackConfig": "apps/api-gateway/webpack.config.js",
+        "generatePackageJson": true
       },
       "configurations": {
         "development": {},
