k8s: added neo4j secrets to users-srv

--- a/k8s/users-srv-depl.yaml
+++ b/k8s/users-srv-depl.yaml
@@ -22,6 +22,8 @@ spec:
               name: mongodb-secrets
           - secretRef:
               name: kafka-secrets
+          - secretRef:
+              name: neo4j-secrets
 ---
 apiVersion: v1
 kind: Service
