--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,15 @@
 {
+  "hosting": [
+    {
+      "target": "users",
+      "public": "dist/apps/users-client"
+    },
+    {
+      "target": "admin",
+      "public": "dist/apps/admins-client"
+    }
+
+  ],
   "functions": [
     {
       "source": "functions",
@@ -9,9 +20,7 @@
         "firebase-debug.log",
         "firebase-debug.*.log"
       ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint"
-      ]
+      "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"]
     }
   ]
 }
