--- a/k8s/api-gateway-depl.yaml
+++ b/k8s/api-gateway-depl.yaml
@@ -6,11 +6,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api-gateway
+      run: api-gateway
   template:
     metadata:
       labels:
-        app: api-gateway
+        run: api-gateway
     spec:
       containers:
         - name: api-gateway
@@ -33,12 +33,84 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-gateway-srv
+  annotations:
+    cloud.google.com/neg: '{"ingress":true}'
+    cloud.google.com/neg-status: '{"network_endpoint_groups":{"80":"k8s1-e1347f7e-default-api-gateway-depl-nr6fj-80-616a28bb"},"zones":["asia-southeast1-a","asia-southeast1-c"]}'
+  creationTimestamp: "2024-04-07T21:35:42Z"
+  finalizers:
+  - service.kubernetes.io/load-balancer-cleanup
+  generateName: api-gateway-depl-
+  managedFields:
+  - apiVersion: v1
+    fieldsType: FieldsV1
+    fieldsV1:
+      f:metadata:
+        f:generateName: {}
+      f:spec:
+        f:allocateLoadBalancerNodePorts: {}
+        f:externalTrafficPolicy: {}
+        f:internalTrafficPolicy: {}
+        f:ports:
+          .: {}
+          k:{"port":80,"protocol":"TCP"}:
+            .: {}
+            f:port: {}
+            f:protocol: {}
+            f:targetPort: {}
+        f:selector: {}
+        f:sessionAffinity: {}
+        f:type: {}
+    manager: GoogleCloudConsole
+    operation: Update
+    time: "2024-04-07T21:35:42Z"
+  - apiVersion: v1
+    fieldsType: FieldsV1
+    fieldsV1:
+      f:metadata:
+        f:finalizers:
+          .: {}
+          v:"service.kubernetes.io/load-balancer-cleanup": {}
+      f:status:
+        f:loadBalancer:
+          f:ingress: {}
+    manager: cloud-controller-manager
+    operation: Update
+    subresource: status
+    time: "2024-04-07T21:36:29Z"
+  - apiVersion: v1
+    fieldsType: FieldsV1
+    fieldsV1:
+      f:metadata:
+        f:annotations:
+          f:cloud.google.com/neg-status: {}
+    manager: glbc
+    operation: Update
+    subresource: status
+    time: "2024-04-07T21:45:06Z"
+  name: api-gateway-depl-nr6fj
+  namespace: default
+  resourceVersion: "70450"
+  uid: ead40962-a23d-49b9-a057-7961c9fc78cd
 spec:
-  selector:
-    app: api-gateway
+  allocateLoadBalancerNodePorts: true
+  clusterIP: 34.118.233.115
+  clusterIPs:
+  - 34.118.233.115
+  externalTrafficPolicy: Cluster
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+  - IPv4
+  ipFamilyPolicy: SingleStack
   ports:
-    - name: api-gateway
-      protocol: TCP
-      port: 3000
-      targetPort: 3000
+  - nodePort: 30536
+    port: 80
+    protocol: TCP
+    targetPort: 3000
+  selector:
+    run: api-gateway
+  sessionAffinity: None
+  type: LoadBalancer
+status:
+  loadBalancer:
+    ingress:
+    - ip: 35.240.218.147
