--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -105,6 +105,9 @@
       "@food-stories/users-client/feed/ui/stories": [
         "libs/users-client/feed/ui/stories/src/index.ts"
       ],
+      "@food-stories/users-client/notifications": [
+        "libs/users-client/notifications/src/index.ts"
+      ],
       "@food-stories/users-client/post/data-access": [
         "libs/users-client/post/data-access/src/index.ts"
       ],
