--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -57,6 +57,9 @@
       "@food-stories/common/logger": ["libs/common/logger/src/index.ts"],
       "@food-stories/common/typings": ["libs/common/typings/src/index.ts"],
       "@food-stories/common/utils": ["libs/common/utils/src/index.ts"],
+      "@food-stories/notifications-srv/notifications": [
+        "libs/notifications-srv/notifications/src/index.ts"
+      ],
       "@food-stories/posts-srv//post": ["libs/posts-srv/post/src/index.ts"],
       "@food-stories/posts-srv/comment": [
         "libs/posts-srv/comment/src/index.ts"
