feat: created  users joined graph

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nx/nest": "^16.5.5",
     "@types/cors": "^2.8.13",
     "axios": "^1.0.0",
+    "chart.js": "^4.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
@@ -47,6 +48,7 @@
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "neo4j-driver": "^5.18.0",
+    "ng2-charts": "^6.0.0",
     "ngx-image-cropper": "^7.2.1",
     "ngx-socket-io": "^4.6.1",
     "protobufjs": "^7.2.4",
